--- a/web/css/sb-admin.css
+++ b/web/css/sb-admin.css
@@ -10900,7 +10900,7 @@ footer.sticky-footer {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: calc(100% - 90px);
+  width: 100%;
   height: 80px;
   background-color: #e9ecef;
 }
@@ -10912,7 +10912,7 @@ footer.sticky-footer .copyright {
 
 @media (min-width: 768px) {
   footer.sticky-footer {
-    width: calc(100% - 225px);
+    width: calc(100% );
   }
 }
 
@@ -10924,4 +10924,34 @@ body.sidebar-toggled footer.sticky-footer {
   body.sidebar-toggled footer.sticky-footer {
     width: calc(100% - 90px);
   }
+}
+.searchGroup{
+  margin-bottom: 20px;
+  margin-left:25%;
+}
+.searchImg {
+  width: 14px;
+  height: 21px;
+}
+
+.box {
+  border: 1px solid lightgray;
+  border-radius: 6px;
+  margin: auto;
+  padding: 10px;
+  text-align:left;
+}
+.groupImg {
+  border: 1px solid lightgray;
+  width: 170px;
+  height: 50px;
+  margin-left: -1px;
+}
+.groupUl {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.groupBtn{
+  margin-left: 30px;
 }
